--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Sources/Markdown/Resources/web.bundle/*.css linguist-vendored
-Sources/Markdown/Resources/web.bundle/*.js linguist-vendored
+Sources/Markdown/Resources/web.bundle/*.js  linguist-vendored
+*.js  linguist-detectable=false
