--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -5,9 +5,9 @@ on:
       - v*
 jobs:
   build-deploy:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - run: mkdir website
 
@@ -27,7 +27,7 @@ jobs:
 
       - name: get tag version
         id: tag_version
-        uses: jaywcjlove/changelog-generator@v1.5.0
+        uses: jaywcjlove/changelog-generator@main
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -38,7 +38,7 @@ jobs:
       
       - name: Generate changelog
         id: changelog
-        uses: jaywcjlove/changelog-generator@v1.5.0
+        uses: jaywcjlove/changelog-generator@main
         with:
           filter-author: (小弟调调™)
           filter: (^[\s]+?[R|r]elease)|(^[R|r]elease)
